typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            519,
        ),
        hi: BytePos(
            557,
        ),
        ctxt: #0,
    },
    left: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    535,
                ),
                hi: BytePos(
                    541,
                ),
                ctxt: #0,
            },
            kind: TsNumberKeyword,
        },
    ),
    right: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    507,
                ),
                hi: BytePos(
                    511,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:8:5
  |
8 | var resultIsString: number = foo(1, "123"); //error here
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: AssignFailed {
    span: Span {
        lo: BytePos(
            654,
        ),
        hi: BytePos(
            673,
        ),
        ctxt: #0,
    },
    left: Param(
        Param {
            span: Span {
                lo: BytePos(
                    604,
                ),
                hi: BytePos(
                    606,
                ),
                ctxt: #0,
            },
            name: Atom('T1' type=inline),
            constraint: None,
            default: None,
        },
    ),
    right: Param(
        Param {
            span: Span {
                lo: BytePos(
                    608,
                ),
                hi: BytePos(
                    610,
                ),
                ctxt: #0,
            },
            name: Atom('T2' type=inline),
            constraint: None,
            default: None,
        },
    ),
    cause: [],
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:14:9
   |
14 |     var result: T1 = (x, y); //error here
   |         ^^^^^^^^^^^^^^^^^^^

